# web-admin-pro/config/routes.ts
@@ -31,38 +31,21 @@ export default [
         component: './SourceDetail',
       },
       {
-        path: '/works',
+        path: '/papers',
         name: '论文管理',
-        component: './Works',
+        component: './Papers',
       },
       {
-        path: '/works/:workId',
+        path: '/papers/:fileId',
         name: '论文详情',
         hideInMenu: true,
-        component: './WorkDetail',
+        component: './PaperDetail',
       },
       {
-        path: '/works/:workId/blocks',
+        path: '/papers/:fileId/blocks',
         name: '论文全文',
         hideInMenu: true,
-        component: './WorkBlocks',
-      },
-      {
-        path: '/original-files',
-        name: '论文全文文件',
-        component: './OriginalFiles',
-      },
-      {
-        path: '/original-files/:fileId',
-        name: '论文全文文件详情',
-        hideInMenu: true,
-        component: './OriginalFileDetail',
-      },
-      {
-        path: '/original-files/:fileId/blocks',
-        name: '解析后全文',
-        hideInMenu: true,
-        component: './OriginalFileBlocks',
+        component: './PaperBlocks',
       },
     ],
   },
@@ -137,7 +120,7 @@ export default [
         component: './Knowledge/CausalGraph/EdgeDetail',
       },
       {
-        path: '/knowledge/causal-graph/papers/:workId',
+        path: '/knowledge/causal-graph/causal-claims/:workId',
         name: '论文因果声明',
         hideInMenu: true,
         component: './Knowledge/CausalGraph/PaperClaims',
